syntax = "proto3";

package todo.v1;

option go_package = "golang-connects/gen/proto/todo/v1;todov1";

import "google/protobuf/timestamp.proto";

service TodoService {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc List(stream ListRequest) returns (stream ListResponse) {}
}

message CreateRequest {
    Todo todo = 1;
}

message CreateResponse {
    Todo todo = 1;
}

message ReadRequest {
    string id = 1;
}

message ReadResponse {
    Todo todo = 1;
}

message UpdateRequest {
    string id = 1;
    Todo todo = 2;
}

message UpdateResponse {
    Todo todo = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    Todo todo = 1;
}

message ListRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListResponse {
    repeated Todo todos = 1;
    int32 page = 2;
    int32 limit = 3;
    int32 total = 4;
}

message Todo {
    string id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

